--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -6,10 +6,16 @@ jobs:
     steps:
       - checkout
       - run:
-          name: Run tests
+          name: Build and run tests
           command: fastlane scan
           environment:
             SCAN_DEVICE: iPhone 8 Plus
             SCAN_SCHEME: DrinkOrSink
       - store_test_results:
           path: fastlane/test_output/report.xml
+
+workflows:
+  version: 2
+  build-and-test:
+    jobs:
+      - build-and-test
