--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -6,13 +6,22 @@ jobs:
     steps:
       - checkout
       - run:
-          name: Build and run tests
-          command: fastlane scan
-          environment:
-            SCAN_DEVICE: iPhone 8 Plus
-            SCAN_SCHEME: DrinkOrSink
+        name: Install fastlane
+        command: sudo gem install fastlane
+      - run:
+        name: Build and run tests
+        command: fastlane scan
+        environment:
+          SCAN_DEVICE: iPhone 8 Plus
+          SCAN_SCHEME: DrinkOrSink
       - store_test_results:
-          path: fastlane/test_output/report.xml
+        path: test_output/report.xml
+      - store_artifacts:
+        path: /tmp/test-results
+        destination: scan-test-results
+      - store_artifacts:
+        path: ~/Library/Logs/scan
+        destination: scan-logs
 
 workflows:
   version: 2
