--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,30 +1,35 @@
 version: 2
 jobs:
-  build-and-test:
+  build:
     macos:
       xcode: "9.2.0"
+    working_directory: /Users/distiller/project
+    environment:
+      FL_OUTPUT_DIR: /Users/distiller/project/output
+      FASTLANE_LANE: test
+    shell: /bin/bash --login -o pipefail
     steps:
       - checkout
+      - restore_cache:
+          key: 1-gems-{{ checksum "Gemfile.lock" }}
+      - run: bundle check || bundle install --path vendor/bundle
+      - save_cache:
+          key: 1-gems-{{ checksum "Gemfile.lock" }}
+          paths:
+            - vendor/bundle
       - run:
-          name: Install fastlane
-          command: sudo gem install fastlane
+          name: fastlane
+          command: bundle exec fastlane $FASTLANE_LANE
       - run:
-          name: Build and run tests
-          command: fastlane scan
-          environment:
-            SCAN_DEVICE: iPhone 8 Plus
-            SCAN_SCHEME: DrinkOrSink
+          command: cp $FL_OUTPUT_DIR/scan/report.junit $FL_OUTPUT_DIR/scan/results.xml
+          when: always
+      - store_artifacts:
+          path: /Users/distiller/project/output
       - store_test_results:
-          path: test_output/report.xml
-      - store_artifacts:
-          path: /tmp/test-results
-          destination: scan-test-results
-      - store_artifacts:
-          path: ~/Library/Logs/scan
-          destination: scan-logs
+          path: /Users/distiller/project/output/scan
 
 workflows:
   version: 2
-  build-and-test:
+  build:
     jobs:
-      - build-and-test
+      - build
