--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -10,15 +10,10 @@ jobs:
     shell: /bin/bash --login -o pipefail
     steps:
       - checkout
-      - restore_cache:
-          key: 1-gems-{{ checksum "Gemfile.lock" }}
-      - run: bundle check || bundle install --path vendor/bundle
-      - save_cache:
-          key: 1-gems-{{ checksum "Gemfile.lock" }}
-          paths:
-            - vendor/bundle
+      - run: mkdir $FL_OUTPUT_DIR
+      - run: bundle install
       - run:
-          name: fastlane
+          name: Fastlane
           command: bundle exec fastlane $FASTLANE_LANE
       - run:
           command: cp $FL_OUTPUT_DIR/scan/report.junit $FL_OUTPUT_DIR/scan/results.xml
