--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -10,7 +10,7 @@ jobs:
     steps:
       - checkout
       - run: mkdir $FL_OUTPUT_DIR
-      - run: rbenv global 2.5.0
+      - run: echo "ruby-2.5" > ~/.ruby-version
       - run: bundle install
       - run: bundle exec fastlane test
       - store_artifacts:
