--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,5 +1,23 @@
 version: 2
 jobs:
+  swiftlint:
+    docker:
+      - image: dantoml/swiftlint:latest
+    steps:
+      - checkout
+      - run: swiftlint lint --reporter junit | tee result.xml
+      - store_artifacts:
+          path: result.xml
+      - store_test_results:
+          path: result.xml
+
+  danger:
+    docker:
+      - image: dantoml/danger:latest
+    steps:
+      - checkout
+      - run: danger
+
   build-and-test:
     macos:
       xcode: "9.2.0"
@@ -29,4 +47,6 @@ workflows:
   version: 2
   build-and-test:
     jobs:
+      - swiftlint
+      - danger
       - build-and-test
